[tool.poetry]
name = "snykor"
version = "0.1.0"
description = ""
authors = ["Gareth Rushgrove <gareth@morethanseven.net>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.0"
gunicorn = "^20.1.0"
structlog = "^21.1.0"

[tool.poetry.dev-dependencies]
pytest-pylint = "^0.18.0"
pytest-black = "^0.3.12"
pytest-isort = "^2.0.0"
pytest-cov = "^2.11.1"
pytest-mypy = "^0.8.1"
pytest-flask = "^1.2.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
